--- a/FirstProject/Conditional_image.jrxml
+++ b/FirstProject/Conditional_image.jrxml
@@ -30,7 +30,7 @@
 		<band height="172" splitType="Stretch">
 			<image>
 				<reportElement x="220" y="20" width="130" height="125" uuid="d395ca8e-bf2f-40de-94aa-3fed68f3ea70"/>
-				<imageExpression><![CDATA[$P{imageName}=="tree1"?"\\Images\\tree1.png":"\\Images\\tree2.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{imageName}.equals("tree1")?"\\Images\\tree1.png":"\\Images\\tree2.png"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement x="20" y="70" width="100" height="19" uuid="cd2de853-ee14-485c-bae3-dd7846c1fdcc"/>
