--- a/MSR/MSR-4.0-Avaloq.jrxml
+++ b/MSR/MSR-4.0-Avaloq.jrxml
@@ -63,12 +63,15 @@
 	<parameter name="selectedDate" class="java.lang.String">
 		<defaultValueExpression><![CDATA["20190601"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="company_mesi" class="java.lang.String">
-		<defaultValueExpression><![CDATA["SB4"]]></defaultValueExpression>
+	<parameter name="is_mesi" class="java.lang.Boolean">
+		<defaultValueExpression><![CDATA[true]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select 1]]>
+		<![CDATA[SELECT 1]]>
 	</queryString>
+	<field name="?column?" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="?column?"/>
+	</field>
 	<variable name="newSubsection" class="java.lang.Integer">
 		<variableExpression><![CDATA[$P{subsection}]]></variableExpression>
 	</variable>
@@ -119,10 +122,10 @@
 				<text><![CDATA[Avaloq core banking solution is based on an Avaloq customization named Avaloq Source Master (ASM) that enables multiple Business Units (BU) on a single Avaloq instance.]]></text>
 			</staticText>
 		</band>
-		<band height="155">
-			<image onErrorType="Blank">
-				<reportElement style="TOC-Title1" x="260" y="0" width="170" height="150" isRemoveLineWhenBlank="true" uuid="454a8564-54a0-48e0-908c-60e8e020939d"/>
-				<imageExpression><![CDATA[$P{company_mesi}.equals("SB4")?"\\Images\\AvaloqSourceMaster.png":"\\Images\\Avaloq_Source_Master_1.png"]]></imageExpression>
+		<band height="164">
+			<image hAlign="Center" vAlign="Middle">
+				<reportElement x="269" y="0" width="190" height="164" uuid="f7946bd9-5931-4109-a8f6-c6495d5d094d"/>
+				<imageExpression><![CDATA[$P{is_mesi}?"/Images/AvaloqSourceMaster.png":"/Images/Avaloq_Source_Master_1.png"]]></imageExpression>
 			</image>
 		</band>
 		<band height="123">
@@ -158,13 +161,14 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="55" splitType="Stretch">
+		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
-				<reportElement x="0" y="41" width="153" height="10" uuid="0e03300e-547b-49bc-8fba-b3589a5c6e51"/>
+				<reportElement x="0" y="19" width="153" height="10" uuid="0e03300e-547b-49bc-8fba-b3589a5c6e51"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="660" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
+				<reportElement x="650" y="8" width="80" height="21" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
