--- a/Templates & Styles/Templates/Welcome.jrxml
+++ b/Templates & Styles/Templates/Welcome.jrxml
@@ -60,13 +60,14 @@ Schwerzistrasse 6 I CH-8807 Freienbach I Switzerland
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="51" splitType="Stretch">
+		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
-				<reportElement x="0" y="41" width="153" height="10" uuid="0e03300e-547b-49bc-8fba-b3589a5c6e51"/>
+				<reportElement x="0" y="20" width="153" height="10" uuid="680b37a6-cfa9-4b7b-85ac-9f9bcf02aa72"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="420" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
+				<reportElement x="403" y="9" width="80" height="21" uuid="5e766f20-6491-4d3c-98ba-ecfa0292b3eb"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
